# panda3d-lion-render

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  python-test.yml
lionrender/: __init__.py  filter_pass.py  gpubuffer.py  renderpass.py  scene_pass.py  xfbbuffer.py
lionrender/shaders/: fxaa.frag  fxaa.lib
samples/roaming-ralph/: main.py
samples/roaming-ralph/shaders/: fsq.frag
tests/: conftest.py  test_gpubuffer.py  test_panda3d_render_pass.py  test_renderpass.py
