[metadata]
name = panda3d-lion-render
author = Daniel Stokes
license_file=LICENSE.txt
home-page = https://github.com/kupoman/panda3d-lion-render
description = A rendering toolkit for Panda3D
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include-package-data = true

[global]
verbose=0
